feat: add apotheke.at
